# game_updater

./: .gitignore  Cargo.toml  Readme.md  root_folder_server_info.ron
admin_panel/: Cargo.toml  Trunk.toml  index.html
admin_panel/src/: app.rs  main.rs
admin_panel/src/backend/: events.rs  file_info_holder.rs  log_holder.rs  mod.rs  notification.rs  packet_handler.rs  patch_note.rs
admin_panel/src/backend/network/: mod.rs
admin_panel/src/frontend/: dialog.rs  left_block.rs  mod.rs  notification.rs  ui_kit.rs
admin_panel/src/frontend/easy_mark/: easy_mark_editor.rs  easy_mark_highlighter.rs  easy_mark_parser.rs  mod.rs
admin_panel/src/frontend/right_block/: file_info.rs  logs.rs  mod.rs  patchnotes.rs
client_lib/: Cargo.toml
game_files_preparator/: Cargo.toml
game_files_preparator/src/: main.rs
server/: Cargo.toml
server/src/: db.rs  file_updater.rs  log.rs  main.rs
server/src/admin_panel/: mod.rs  packet_handler.rs
shared/: Cargo.toml
shared/src/: admin_panel.rs  file.rs  lib.rs
test_files/: file_1.txt
