[package]
name = "admin_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["js"] }

egui = { version = "0.28" }
egui_extras = { version = "0.28" }
eframe = { version = "0.28" }
egui_plot = { version = "0.28" }
wasm-bindgen-futures = { version = "0.4.42"}
futures = { version = "0.3.30" }
reqwasm = { version = "0.5.0"}
gloo-timers = { version = "0.3.0", features = ["futures"]}
console_error_panic_hook = { version = "0.1.7" }
web-sys = { version = "0.3" }
strum = { version = "0.26", features = ["derive"] }
bytesize = { version = "1.3" }
log = { version = "0.4" }
rfd = { version = "0.14" }
byteorder = { version = "1.5" }