[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ron = { workspace = true }
tokio = { workspace = true, features = ["full"] }

axum = { version = "0.7", features = ["tokio", "tracing", "ws"]  }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs", "trace"] }
futures = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = { version = "0.4.0" }

