[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
byteorder = { version = "1.5.0" }
seahash = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[target.x86_64-pc-windows-gnu.dependencies]
flate2 = {workspace = true, features = ["zlib-ng"]}
[target.x86_64-unknown-linux-gnu.dependencies]
flate2 = {workspace = true, features = ["zlib-ng"]}

